test/semant/negative_controls/buggy_progs/arg-length-mismatch.con
concept test
purpose "something"
state
  x : Int
  y : String 
actions
  a() : Int
  1
principle
  1 = a(x) 
